add in further styles for inital stub

--- a/app/views/site/index.html.erb
+++ b/app/views/site/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Site#index</h1>
-<p>Find me in app/views/site/index.html.erb</p>
+<section class="todoapp">
+  <header class="header">
+    <h1>TODO Lists</h1>
+    <input class="new-todo" placeholder="Make a new list" autofocus="">
+  </header>
+
+  <section class="main">
+    <ul class="todo-list">
+      <li>
+        <div class="view">
+          <label><a href="#">Shopping List</a></label>
+        </div>
+      </li>
+      <li>
+        <div class="view">
+          <label><a href="#">Gift List</a></label>
+        </div>
+      </li>
+      <li>
+        <div class="view">
+          <label><a href="#">Reading List</a></label>
+        </div>
+      </li>
+    </ul>
+  </section>
+
+  <footer class="footer">
+  </footer>
+</section>
