add item schema and show each item a list has in its show page

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,11 +6,13 @@
 
   <section class="main">
     <ul class="todo-list">
-      <li>
-        <div class="view">
-          <label>Milk</label>
-        </div>
-      </li>
+      <% @list.items.each do |item| %>
+        <li>
+          <div class="view">
+            <label><%= item.description %></label>
+          </div>
+        </li>
+      <% end %>
     </ul>
   </section>
 
