Add new item form and functionality

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -3,6 +3,7 @@
     <h1>TODO Lists</h1>
     <%= form_for(@list) do |f| %>
       <%= f.text_field :name, :class => "new-todo" %>
+      <%= f.submit :style => "display: none" %>
     <% end %>
   </header>
 
