add validation for new items and add css plus error messages for invalid items and list creation

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@
   <header class="header">
     <h1>TODO Lists</h1>
     <%= form_for(@list) do |f| %>
-      <%= f.text_field :name, :class => "new-todo" %>
+      <%= f.text_field :name, :class => "new-todo", :placeholder => @list.errors.full_messages_for(:name).first || "Enter a new list name..." %>
       <%= f.submit :style => "display: none" %>
     <% end %>
   </header>
