add status to items, and add #complete? and #incomplete? to item model

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -12,6 +12,7 @@
       <% @list.items.each do |item| %>
         <li>
           <div class="view">
+            <input type="checkbox" class="toggle">
             <label><%= item.description %></label>
           </div>
         </li>
