--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -12,9 +12,10 @@
       <% @list.items.each do |item| %>
         <li class="<%= "completed" if item.complete?  %>">
           <div class="view">
-            <form action="/">
-              <input type="checkbox" class="toggle" <%= "checked='check'" if item.complete? %>>
-            </form>
+            <%= form_for([@list, item]) do |f| %>
+              <%= f.check_box :status, class: "toggle", checked: (true if item.complete?) %>
+              <!-- <input type="checkbox" class="toggle" <%= "checked='check'" if item.complete? %>> -->
+            <% end %>
             <label><%= item.description %></label>
           </div>
         </li>
